--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.6.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/editorjs": "^2.27.2",
     "@editorjs/embed": "^2.5.3",
@@ -20,9 +21,12 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.5.1",
+    "@editorjs/table": "^2.4.4",
+    "@editorjs/warning": "^1.4.1",
     "@flaticon/flaticon-uicons": "^2.2.0",
     "axios": "^1.4.0",
-    "firebase": "^10.1.0",
+    "firebase": "^10.14.1",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +38,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^9.1.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
