--- a/site/package.json
+++ b/site/package.json
@@ -28,9 +28,11 @@
     "axios": "^1.4.0",
     "firebase": "^10.14.1",
     "framer-motion": "^10.13.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
